--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB hdrs "*.h*") 
 file(GLOB srcs "*.cpp")
 
-add_executable(samples ${srcs} ${hdrs} queue.h stack.h)
+add_executable(samples ${srcs} ${hdrs} arithmetic_expression.h queue.h stack.h)
 
 
